more feature adeed

--- a/index.html
+++ b/index.html
@@ -33,6 +33,120 @@
                 planetary bakeries, tables with strawberries in snow, and a plate like the moon itself from which we can
                 all eat. For now I ask no more than the justice of eating. <span class="color">~ Pablo Neruda, Chilean
                     Poet</span></p>
+            <a class="link-button" target="_blank" href="https://www.bkash.com/bn/products-services/payment">DONATE</a>
+        </div>
+    </section>
+    <section class="center-view">
+        <div>
+            <h1 class="top-text">DONATE TODAY</h1>
+            <p>The efforts of one person can't move mountains. It's the strength of us all working together
+                that makes a
+                change.</p>
+        </div>
+    </section>
+    <section>
+        <div class="payment-option">
+            <div>
+                <a class="pay-button glow" target="_blank"
+                    href="https://www.bkash.com/bn/products-services/payment">100tk</a>
+            </div>
+            <div>
+                <a class="pay-button glow" target="_blank"
+                    href="https://www.bkash.com/bn/products-services/payment">500tk</a>
+            </div>
+            <div>
+                <a class="pay-button glow" target="_blank"
+                    href="https://www.bkash.com/bn/products-services/payment">1000tk</a>
+            </div>
+            <div>
+                <a class="pay-button glow" target="_blank"
+                    href="https://www.bkash.com/bn/products-services/payment">5000tk</a>
+            </div>
+        </div>
+
+    </section>
+    <section>
+        <form class="payment-option">
+            <div>
+                <label for="payment-option">Other Amount(tk)</label>
+            </div>
+            <div>
+                <input type="text" name="text">
+            </div>
+            <div>
+                <input type="submit" value="DONATE NOW" class="link-button" accesskey="s">
+            </div>
+        </form>
+    </section>
+    <section>
+        <div class="center-view">
+            <h1 class="top-text">DONATION CATEGORY</h1>
+            <p>
+                Always give without remembering and always receive without forgetting.
+            </p>
+        </div>
+        <div class="flex-con">
+            <div id="red" class="exp-edit">
+                <img src="icons/shelter.png" alt="shelter">
+                <h2>Shelter for poor</h2>
+                <p>We think sometimes that poverty is only being hungry, naked and homeless. The poverty of being
+                    unwanted,
+                    unloved and uncared for is the greatest poverty. We must start in our own homes to remedy this kind
+                    of
+                    poverty.</p>
+            </div>
+            <div id="green" class="exp-edit">
+                <img src="icons/food.png" alt="food">
+                <h2>Food for children</h2>
+                <p>Recent research shows that many children who do not have enough to eat wind up with diminished
+                    capacity
+                    to understand and learn. Children don’t have to be starving for this to happen.</p>
+
+            </div>
+            <div id="blue" class="exp-edit">
+                <img src="icons/clothes11.png" alt="clothes">
+                <h2>clothes for poor</h2>
+                <p>Government welfare programs contribute to the disintegration of poor families. They make women and
+                    children dependent on government; dependent for food, for clothing, for shelter; and reward
+                    fatherless families with extra benefits and welfare perks.</p>
+            </div>
+        </div>
+    </section>
+    <section class="flex-con text">
+        <div>
+            <img src="images/donation9.jpg" alt="">
+        </div>
+
+        <div>
+            <h1>They need our help</h1>
+            <p>
+                We may be comfortably living in our apartments or houses. We may not be getting affected by hunger
+                during this time of despair. But there are so many people out there who may not have eaten a proper meal
+                in the last few days. The turmoil caused by the COVID 19 pandemic is playing havoc in the lives of
+                millions of people from all around the world. We are all in this together. We all can do our bit. Let's
+                feed the hungry and help the less fortunate among us. Together we can make this world a better place.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.bkash.com/bn/products-services/payment">CONTRIBUTE
+                NOW</a>
+        </div>
+        </div>
+    </section>
+    <section class="flex-con">
+        <div class="text">
+            <h1>Your donation can save them</h1>
+            <p>Self-satisfaction makes life worth living. We live in a world that encompasses a major share of the poor
+                and downtrodden. Each person may have a different need in his/her life. While some yearn for success,
+                some don’t have the most basic amenities such as a shelter or enough food to eat. But that’s not all,
+                some people may be in need of mere affection, those who are longing to see smiles. We are lucky to be
+                living a comfortable life. How good it will be if we try to bring smiles to those sad faces? Generosity
+                is an easily doable exercise. We all must remember one thing that helping others is a blessing in
+                disguise. Because when we help others to grow, we grow in the process too. It adds value and meaning to
+                our lives.</p>
+            <a class="link-button" target="_blank" href="https://www.bkash.com/bn/products-services/payment">CONTRIBUTE
+                NOW</a>
+        </div>
+        <div class="text">
+            <img src="images/donation5.jpg" alt="">
         </div>
     </section>
 </body>
