--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 
 <body>
@@ -149,4 +151,28 @@
             <img src="images/donation5.jpg" alt="">
         </div>
     </section>
+    <section class="center-view">
+        <div>
+            <h1 class="top-text">STAY CONNECTED</h1>
+            <P">HUSTLE | LOYELTY | RESPECT</P>
+        </div>
+
+        <form>
+            <div>
+                <label class="email-address">Email subscription
+                    <input placeholder="What is your Email?">
+                </label>
+                <p class="subscription-button">
+                    <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=msSc7Mv0QHY"><span>Sign
+                            Up</span></a>
+                </p>
+
+            </div>
+        </form>
+    </section>
+
 </body>
+<footer class="center-view the-end">
+    <h1 class="top-text">STAY BLESSED | STAY HONEST</h1>
+    <P>Believe in yourself</P>
+</footer>
